Link til index.html virker nu med CSS

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -13,7 +13,7 @@
 <body>
 <nav>
     <div class="wrapper">
-        <div class="logo"><a href="/index.html">Kino XP</a></div>
+        <div class="logo"><a href="/KinoXPFrontend/public/index.html">Kino XP</a></div>
         <input type="checkbox" id="menu-btn">
         <input type="checkbox" id="close-btn">
         <ul class="nav-links">
@@ -35,60 +35,60 @@
                 </ul>
             </li>
 
-            <li>
-                <a href="#" class="desktop-item">Mega Menu</a>
-                <input type="checkbox" id="showMega">
-                <label for="showMega" class="mobile-item">Mega Menu</label>
-                <div class="mega-box">
-                    <div class="content">
+<!--            <li>-->
+<!--                <a href="#" class="desktop-item">Mega Menu</a>-->
+<!--                <input type="checkbox" id="showMega">-->
+<!--                <label for="showMega" class="mobile-item">Mega Menu</label>-->
+<!--                <div class="mega-box">-->
+<!--                    <div class="content">-->
 
-                        <div class="row">
-                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg" alt="">
-                        </div>
+<!--                        <div class="row">-->
+<!--                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg" alt="">-->
+<!--                        </div>-->
 
-                        <div class="row">
-                            <header>Service 1</header>
-                            <ul class="mega-links">
-                                <li><a href="#">Text</a></li>
-                                <li><a href="#">Text</a></li>
-                                <li><a href="#">Text</a></li>
-                                <li><a href="#">Text</a></li>
-                            </ul>
-                        </div>
+<!--                        <div class="row">-->
+<!--                            <header>Service 1</header>-->
+<!--                            <ul class="mega-links">-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
 
-                        <div class="row">
-                            <header>Service 2</header>
-                            <ul class="mega-links">
-                                <li><a href="#">Text</a></li>
-                                <li><a href="#">Text</a></li>
-                            </ul>
-                        </div>
+<!--                        <div class="row">-->
+<!--                            <header>Service 2</header>-->
+<!--                            <ul class="mega-links">-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
 
-                        <div class="row">
-                            <header>Service 3</header>
-                            <ul class="mega-links">
-                                <li><a href="#">Text</a></li>
-                                <li><a href="#">Text</a></li>
-                                <li><a href="#">Text</a></li>
-                            </ul>
-                        </div>
+<!--                        <div class="row">-->
+<!--                            <header>Service 3</header>-->
+<!--                            <ul class="mega-links">-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                                <li><a href="#">Text</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
 
 
-                    </div>
-                </div>
-            </li>
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </li>-->
 
-            <li><a href="#">About</a></li>
+<!--            <li><a href="#">About</a></li>-->
 
-            <li>
-                <a href="#">Account</a>
-                <input type="checkbox" id="showDrop">
-                <label for="showDrop" class="mobile-item">Dropdown Menu</label>
-                <ul class="drop-menu">
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Sign up</a></li>
-                </ul>
-            </li>
+<!--            <li>-->
+<!--                <a href="#">Account</a>-->
+<!--                <input type="checkbox" id="showDrop">-->
+<!--                <label for="showDrop" class="mobile-item">Dropdown Menu</label>-->
+<!--                <ul class="drop-menu">-->
+<!--                    <li><a href="#">Login</a></li>-->
+<!--                    <li><a href="#">Sign up</a></li>-->
+<!--                </ul>-->
+<!--            </li>-->
 
         </ul>
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
@@ -97,14 +97,14 @@
 
 <section>
     <div class="body-text">
-        <div class="title">Krav:</div>
+        <div class="title">Info:</div>
 
         <div style="font-size: medium;">
-            <li>It is a smaller cinema with 2 movie theatres.</li>
-            <li>They are showing different categories of movies e.g., Horror, Romance, Action, Science Fiction, etc.</li>
-            <li>There are different age limits for the individual movies.</li>
-            <li>There are 20 rows with 12 numbered seats per row in the smallest theatre.</li>
-            <li>There are 25 rows with 16 numbered seats per row in the largest theatre.</li>
+            <li>Hardy Buch</li>
+            <li>Telefon nummer: 112</li>
+            <li>Adresse: This st 6</li>
+            <li>Forklaring af firmaet</li>
+            <li>Indsæt chatgpt footer fra Daniel</li>
             <li>At the moment, all reservations of tickets are done by phone.</li>
             <li>What to show, and in which theatre is planned 3 months in advance.</li>
             <li>Sometimes extra shows are done.</li>
