styling on calendar

--- a/public/index.html
+++ b/public/index.html
@@ -217,6 +217,8 @@
                     <h3>Contact us here:</h3>
                     <p>+45 36 23 88 12</p>
                     <p>support@kinoxp.com</p>
+                    <br>
+                    <p>Please contact us in case of reservation<br>for larger groups (+12 people)</p>
                 </div>
                 <div class="opening-times">
                     <h3>Opening Times</h3>
