Fixing mo_movie_schedule

--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../styles/popular_movies.css">
     <link rel="stylesheet" href="../styles/movie_schedule_styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
-    
-    <script src="../src/dashboardJS/dashboard.js" defer type="module"></script>
+    <script src="../src/dashboardJS/dashboard.js" defer></script>
+    <script src="../src/movie_schedule/mo_movie_schedule.js" defer type="module"></script>
     <!-- Movie Schedule -->
 </head>
 
@@ -23,11 +23,9 @@
             <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
 
-                <li><a href="#">About</a></li>
 
                 <!-- Account -->
                 <li>
-                    <a id="login-link" href="#">Login</a>
                 </li>
                 </ul>
                 <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
