cinemaStore done part 2

--- a/public/html/cinemaStore.html
+++ b/public/html/cinemaStore.html
@@ -27,6 +27,7 @@
     </ul>
     <p>Total: $<span id="total">0.00</span></p>
     <button id="purchase-button">Purchase</button>
+    <input type="date" id="saleDateInput" name="saleDate">
 </div>
 
 </body>
