About page info added

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -35,89 +35,84 @@
                 </ul>
             </li>
 
-<!--            <li>-->
-<!--                <a href="#" class="desktop-item">Mega Menu</a>-->
-<!--                <input type="checkbox" id="showMega">-->
-<!--                <label for="showMega" class="mobile-item">Mega Menu</label>-->
-<!--                <div class="mega-box">-->
-<!--                    <div class="content">-->
-
-<!--                        <div class="row">-->
-<!--                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg" alt="">-->
-<!--                        </div>-->
-
-<!--                        <div class="row">-->
-<!--                            <header>Service 1</header>-->
-<!--                            <ul class="mega-links">-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-
-<!--                        <div class="row">-->
-<!--                            <header>Service 2</header>-->
-<!--                            <ul class="mega-links">-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-
-<!--                        <div class="row">-->
-<!--                            <header>Service 3</header>-->
-<!--                            <ul class="mega-links">-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                                <li><a href="#">Text</a></li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-
-
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
-
-<!--            <li><a href="#">About</a></li>-->
-
-<!--            <li>-->
-<!--                <a href="#">Account</a>-->
-<!--                <input type="checkbox" id="showDrop">-->
-<!--                <label for="showDrop" class="mobile-item">Dropdown Menu</label>-->
-<!--                <ul class="drop-menu">-->
-<!--                    <li><a href="#">Login</a></li>-->
-<!--                    <li><a href="#">Sign up</a></li>-->
-<!--                </ul>-->
-<!--            </li>-->
-
         </ul>
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
 </nav>
 
-<section>
+<section style="margin-bottom: 5%">
     <div class="body-text">
-        <div class="title">Info:</div>
+        <div class="title">Hardy Buch Kino Cinema info:</div>
 
         <div style="font-size: medium;">
-            <li>Hardy Buch</li>
-            <li>Telefon nummer: 112</li>
-            <li>Adresse: This st 6</li>
-            <li>Forklaring af firmaet</li>
-            <li>Indsæt chatgpt footer fra Daniel</li>
-            <li>At the moment, all reservations of tickets are done by phone.</li>
-            <li>What to show, and in which theatre is planned 3 months in advance.</li>
-            <li>Sometimes extra shows are done.</li>
-            <li>If a movie is doing poorly, it is taken off the program before time.</li>
+            <li>Phone Number: 112</li>
+            <li>Address: This st 6</li>
+            <li>Company Description</li>
+            <li>About Us: </li>
+
+            <p>
+            <h3>Welcome to Kino XP </h3>Your ultimate film haven in the heart of the city! We are dedicated to providing the best cinema experience to our customers and creating unforgettable moments on the big screen.
+            <br>
+            <br>
+            <h3>Our History</h3>
+            Kino XP has a rich history that spans decades. From our humble beginnings as a classic cinema in the city center, we have grown into a modern cinema destination. Over the years, we have consistently adapted to the latest technological advancements and trends in the film industry to ensure that our visitors have the best possible film experience.
+            <br>
+            <br>
+            <h3>Our Vision</h3>
+            Our vision is to create a space where film enthusiasts of all ages can immerse themselves in the magic of cinema. We believe in the power of film to entertain, inspire, and connect people, and we are proud to provide our community with a platform to experience this magic. We work constantly to expand our film selection, improve the technology in our cinemas, and create an atmosphere that feels like a second home for our visitors.
+            <br>
+            <br>
+            <h3>Our Dedicated Team</h3>
+            Behind Kino XP is a dedicated team of passionate professionals who are passionate about film and hospitality. Our employees are here to ensure that your cinema experience is exceptional. From our friendly ticket office staff to our technicians working behind the scenes, we are all focused on providing the best possible service.
+            <br>
+            <br>
+            <h3>Our Cinema</h3>
+            Our cinema is equipped with state-of-the-art technology, including high-definition screens and crystal-clear surround sound. We have different cinema halls to cater to different tastes and preferences, whether you prefer the latest blockbuster films, art films, or family entertainment.
+            <br>
+            <br>
+            <h3>Join Us</h3>
+            We invite you to step into our cinemas and be a part of our history. Whether you are a frequent guest or visiting us for the first time, you are part of the Kino XP family. Thank you for choosing us for your film experiences, and we look forward to creating unforgettable moments with you.
+            <br>
+            <br>
+            <h3>Welcome to Kino XP - where the magic of film comes to life!</h3>
+            </p>
+            <br>
         </div>
 
-        <div class="title" style="padding: 2vh;">Employees:</div>
 
-        <div style="font-size: medium;">
-            <li>2 employees handle the reservations and the sale of tickets, they also manage the sale of popcorn, candy, soda, etc.</li>
-            <li>1 movie operator</li>
-            <li>1 employee to inspect the tickets and handle the cleaning</li>
-        </div>
+        <section style="block-size: 40%;">
+            <div class="about-footer">
+                <div class="about-footer-content">
+                    <div style="max-width: 80vh;">
+                        <h1 class="logo-text">Kino XP</h1>
+                        <p>
+                            Discover the magic of cinema in the heart of Copenhagen at Kino XP. Our theater is not just a venue; it's an experience waiting to unfold. With a diverse selection of movies catering to all ages, we bring stories to life on the big screen. Join us for an immersive cinematic journey where entertainment knows no bounds. Experience the joy of movies like never before, exclusively at Kino XP!
+                        </p>
+                    </div>
+                    <div class="contact">
+                        <h3>Contact us here:</h3>
+                        <p>+45 36 23 88 12</p>
+                        <p>support@kinoxp.com</p>
+                        <br>
+                        <p>Please contact us in case of reservation<br>for larger groups (+12 people)</p>
+                    </div>
+                    <div class="opening-times">
+                        <h3>Opening Times</h3>
+                        <p>Monday: 10-24</p>
+                        <p>Tuesday: 10-24</p>
+                        <p>Wednesday: 10-24</p>
+                        <p>Thursday: 10-24</p>
+                        <p>Friday: 10-24</p>
+                        <p>Saturday: 10-24</p>
+                        <p>Sunday: 10-24</p>
+                    </div>
+                </div>
+                <div class="footer-bottom">
+                    &copy; 2023 Copyright | Kino XP
+                </div>
+
+            </div>
+        </section>
 
     </div>
 </section>
