--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             </li> -->
 
 
-            <li><a href="#">About</a></li>
+            <li><a href="/KinoXPFrontend/public/html/about.html">About</a></li>
                 <!-- Account -->
             <li>
                 <a id="login-link" href="#">Login</a>
