loading icon for MO

--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -83,9 +83,8 @@
                             <h1>Welcome operator</h1>
                             <p>This is your homepage, you can access movie operations on the left and view and edit the schedule below</p>
                         </div>
-                        <div class="loading-message" style="display: none;"><h1>Loading...</h1></div>
-                        <div class="viewmovies">
-                        </div>
+                        <div class="loading-message" style="display: none;flex-direction: column;align-items: center;"><h1>Loading...</h1><br><img src="../icons/loading-gif.gif" alt="" style="height: 10vh;"></div>
+                        <div class="viewmovies"></div>
 
                         <div class="addmovies">
                             <form id="movieForm" method="post">
