button edit for mo

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="src/movie_schedule/movie_schedule_script.js" type="module" defer></script>
     <script type="module" src="src/repository/showing_repository.js" defer></script>
     <script src="src/modalPopUp.js" defer></script>
+    <script src="src/insertTestData.js" defer></script>
 </head>
 
 <body>
