mulig rod mulig fix

--- a/public/html/employeeDashboard.html
+++ b/public/html/employeeDashboard.html
@@ -22,7 +22,7 @@
                 <!-- <li><a href="#">Home</a></li> -->
 
                 
-                <li><a href="about.html">Krav</a></li>
+                <li><a href="../about.html">Krav</a></li>
 
                 <li>
                     <a href="#" class="desktop-item">Options</a>
