--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             </li> -->
 
 
-            <li><a href="/kinoxpfrontend/public/html/about2.html">About</a></li>
+            <li><a href="../public/about.html">About</a></li>
                 <!-- Account -->
             <li>
                 <a id="login-link" href="#">Login</a>
