mulig rod mulig fix rb

--- a/public/html/errorPage.html
+++ b/public/html/errorPage.html
@@ -18,7 +18,7 @@
     <input type="checkbox" id="close-btn">
     <ul class="nav-links">
       <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-      <li><a href="../about.html">Krav</a></li>
+      <li><a href="about.html">Krav</a></li>
       <li>
         <!-- ... Other navigation items ... -->
       </li>
