--- a/public/html/operatorDashboard.html
+++ b/public/html/operatorDashboard.html
@@ -33,25 +33,20 @@
                 </nav>
                 
                 <div id="myModal" class="modal">
-                    <!-- Modal content -->
                     <div class="modal-content">
                         <span class="close">&times;</span>
-                        <div class="login-form">
-                            <h2>Sign In</h2>
+                        <div class="editmovie-form">
+                            <h2>Add movie</h2>
                             <div>
-                                <h3>Username</h3>
-                                <input type="text" id="username" required>
+                                <h3>Movie ID:</h3>
+                                <input type="number" id="movieId" required>
                             </div>
                             <div>
-                                <h3>Password</h3>
-                                <input type="password" id="password" required>
+                                <h3>Theater ID:</h3>
+                                <input type="number" id="theaterId" required>
                             </div>
                             <div>
-                                <a href="#">Forgot Password</a> 
-                                <a href="#" id="signup-link">Signup</a>
-                            </div>
-                            <div>
-                                <input type="submit" value="Login" id="login-btn">
+                                <input type="submit" value="Add Showing" id="addShowing-btn">
                             </div>
                         </div>
                     </div>
